--- a/bundle.yaml
+++ b/bundle.yaml
@@ -27,14 +27,8 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .status.jobCompletionTime
-      name: JobCompletionTime
-      type: string
-    - jsonPath: .status.jobStatus
-      name: JobStatus
-      type: string
-    - jsonPath: .status.podName
-      name: PodName
+    - jsonPath: .status.lastCompletionTime
+      name: LastCompletionTime
       type: string
     name: v1alpha1
     schema:
@@ -54,75 +48,56 @@ spec:
           metadata:
             type: object
           spec:
-            description: CostExporterSpec defines the desired state of CostExporter
+            description: CostExporterSpec defines the desired state of CostExporter.
             properties:
               cloudServiceProvider:
-                description: CloudServiceProvider defines the target cloud service
-                  provide for calculating cost.
+                description: Cloud service provider to calculate costs for. Available
+                  value is `aws`.
+                enum:
+                - aws
                 type: string
-              s3Bucket:
-                description: S3Bucket defines the AWS S3 bucket name where stores
-                  the cost logs.
-                type: string
-              secretRef:
-                description: SecretRef defines the reference to the Kubernetes Secret
-                  where stores the credentials of cloud service provider
+              config:
+                description: 'Configuration for the cloud service provider. For AWS,
+                  the configuration should be a JSON string with the following fields:
+                  - `AWS_ACCESS_KEY` - `AWS_SECRET_KEY` - `S3_BUCKET_NAME`'
                 properties:
-                  apiVersion:
-                    description: API version of the referent.
-                    type: string
-                  fieldPath:
-                    description: 'If referring to a piece of an object instead of
-                      an entire object, this string should contain a valid JSON/Go
-                      field access statement, such as desiredState.manifest.containers[2].
-                      For example, if the object reference is to a container within
-                      a pod, this would take on a value like: "spec.containers{name}"
-                      (where "name" refers to the name of the container that triggered
-                      the event) or if no container name is specified "spec.containers[2]"
-                      (container with index 2 in this pod). This syntax is chosen
-                      only to have some well-defined way of referencing a part of
-                      an object. TODO: this design is not final and this field is
-                      subject to change in the future.'
-                    type: string
-                  kind:
-                    description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                  key:
+                    description: The key of the secret to select from.  Must be a
+                      valid secret key.
                     type: string
                   name:
-                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                      TODO: Add other useful fields. apiVersion, kind, uid?'
                     type: string
-                  namespace:
-                    description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
-                    type: string
-                  resourceVersion:
-                    description: 'Specific resourceVersion to which this reference
-                      is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
-                    type: string
-                  uid:
-                    description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
-                    type: string
+                  optional:
+                    description: Specify whether the Secret or its key must be defined
+                    type: boolean
+                required:
+                - key
                 type: object
                 x-kubernetes-map-type: atomic
+              image:
+                description: Container image to use for cost exporter.
+                type: string
+            required:
+            - cloudServiceProvider
+            - config
             type: object
           status:
-            description: CostExporterStatus defines the observed state of CostExporter
+            description: CostExporterStatus defines the observed state of CostExporter.
             properties:
-              jobCompletionTime:
-                description: JobCompletionTime defines the completion time of the
-                  cost calculation job.
+              isRunning:
+                description: Whether the Job is running. For internal use only.
+                type: boolean
+              lastCompletionTime:
+                description: Time when the last Job was completed.
                 format: date-time
-                type: string
-              jobStatus:
-                description: JobStatus defines the status of the cost calculation
-                  job.
-                type: string
-              podName:
-                description: PodName defines the name of the cost calculation pod.
-                type: string
-              tags:
-                description: Tags defines the json string of using tags.
                 type: string
             type: object
         type: object
+        x-kubernetes-validations:
+        - message: must contain at most 44 characters
+          rule: size(self.metadata.name) <= 44
     served: true
     storage: true
     subresources:
@@ -197,7 +172,7 @@ spec:
                   Available values are `csv` and `binary`.
                 type: string
               image:
-                description: Image of the data generator job.
+                description: Container image to use for the data generator.
                 type: string
               numFiles:
                 description: Number of files to be generated. If `compressedFileFormat`
@@ -556,7 +531,7 @@ spec:
                   is ignored when `endDetection` is set to `true`.
                 type: string
               endDetectionImage:
-                description: Image to use for the end detection.
+                description: Container image to use for the end detection.
                 type: string
               endpointSpecs:
                 description: List of tests upon endpoints.
@@ -642,13 +617,13 @@ spec:
                 minItems: 1
                 type: array
               k6InitializerImage:
-                description: Image to use for the K6 initializer Pod.
+                description: Container image to use for the K6 initializer.
                 type: string
               k6RunnerImage:
-                description: Image to use for the K6 runner Pod.
+                description: Container image to use for the K6 runner.
                 type: string
               k6StarterImage:
-                description: Image to use for the K6 starter Pod.
+                description: Container image to use for the K6 starter.
                 type: string
               pipelineRef:
                 description: Reference to the Pipeline to use for the Experiment.
@@ -1245,8 +1220,8 @@ spec:
                 description: Prometheus configuration.
                 properties:
                   image:
-                    description: Container image to use. Should be synced with the
-                      `version` field.
+                    description: Container image to use for the Prometheus. Must be
+                      synced with the `version` field.
                     type: string
                   replicas:
                     description: Number of replicas.
@@ -1307,7 +1282,7 @@ spec:
                     pattern: ^(0|(([0-9]+)y)?(([0-9]+)w)?(([0-9]+)d)?(([0-9]+)h)?(([0-9]+)m)?(([0-9]+)s)?(([0-9]+)ms)?)$
                     type: string
                   version:
-                    description: Prometheus version. Should be synced with the `image`
+                    description: Prometheus version. Must be synced with the `image`
                       field.
                     type: string
                 type: object
@@ -1575,8 +1550,8 @@ spec:
                         x-kubernetes-int-or-string: true
                     type: object
                   image:
-                    description: Thanos image to use. Must be synced with the `version`
-                      field.
+                    description: Container image to use for the Thanos. Must be synced
+                      with the `version` field.
                     type: string
                   objectStoreConfig:
                     description: Object store configuration for Thanos. Set this field
@@ -1809,8 +1784,7 @@ spec:
                         x-kubernetes-int-or-string: true
                     type: object
                   version:
-                    description: Thanos version to use. Must be synced with the `image`
-                      field.
+                    description: Thanos version. Must be synced with the `image` field.
                     type: string
                 type: object
             type: object
@@ -2230,7 +2204,7 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
               image:
-                description: Image to use for the Simulation.
+                description: Container image to use for the simulation.
                 type: string
               netCostRef:
                 description: NetCost object for the Simulation. Optional if the `digitalTwinType`
