--- a/bundle.yaml
+++ b/bundle.yaml
@@ -2517,7 +2517,15 @@ rules:
 - apiGroups:
   - ""
   resources:
-  - pods
+  - pods/log
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - secrets
   verbs:
   - create
   - delete
@@ -2525,14 +2533,6 @@ rules:
   - list
   - patch
   - update
-  - watch
-- apiGroups:
-  - ""
-  resources:
-  - pods/log
-  verbs:
-  - get
-  - list
   - watch
 - apiGroups:
   - ""
@@ -2737,6 +2737,18 @@ rules:
 - apiGroups:
   - windtunnel.plantd.org
   resources:
+  - netcosts
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - windtunnel.plantd.org
+  resources:
   - pipelines
   verbs:
   - create
@@ -2786,6 +2798,18 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - windtunnel.plantd.org
+  resources:
+  - scenarios
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
 - apiGroups:
   - windtunnel.plantd.org
   resources:
