feat: allow no dt in sim

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -2212,7 +2212,8 @@ spec:
                 type: string
               netCostRef:
                 description: NetCost object for the Simulation. Optional if the `digitalTwinType`
-                  field of the DigitalTwin is `schemaaware`. Always ignored otherwise.
+                  field is specified and the target DigitalTwin is of type `schemaaware`.
+                  Always ignored otherwise.
                 properties:
                   apiVersion:
                     description: API version of the referent.
@@ -2251,8 +2252,9 @@ spec:
               scenarioRef:
                 description: Scenario object for the Simulation. The task names in
                   the Scenario must be the name of a Schema in the DataSet used by
-                  the DigitalTwin. Required if the `digitalTwinType` field of the
-                  DigitalTwin is `schemaaware`. Always ignored otherwise.
+                  the DigitalTwin. Required if the `digitalTwinType` field is specified
+                  and the target DigitalTwin is of type `schemaaware`. Always ignored
+                  otherwise.
                 properties:
                   apiVersion:
                     description: API version of the referent.
@@ -2326,7 +2328,6 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
             required:
-            - digitalTwinRef
             - trafficModelRef
             type: object
           status:
