fix: remove empty env vars

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -2212,7 +2212,7 @@ spec:
                 type: string
               netCostRef:
                 description: NetCost object for the Simulation. Optional if the `digitalTwinType`
-                  field is specified and the target DigitalTwin is of type `schemaaware`.
+                  field is unspecified or the DigitalTwin is of type `schemaaware`.
                   Always ignored otherwise.
                 properties:
                   apiVersion:
@@ -2252,9 +2252,8 @@ spec:
               scenarioRef:
                 description: Scenario object for the Simulation. The task names in
                   the Scenario must be the name of a Schema in the DataSet used by
-                  the DigitalTwin. Required if the `digitalTwinType` field is specified
-                  and the target DigitalTwin is of type `schemaaware`. Always ignored
-                  otherwise.
+                  the DigitalTwin. Required if the `digitalTwinType` field is unspecified
+                  or the DigitalTwin is of type `schemaaware`. Always ignored otherwise.
                 properties:
                   apiVersion:
                     description: API version of the referent.
