--- a/config/crd/bases/windtunnel.plantd.org_simulations.yaml
+++ b/config/crd/bases/windtunnel.plantd.org_simulations.yaml
@@ -80,7 +80,7 @@ spec:
                 type: string
               netCostRef:
                 description: NetCost object for the Simulation. Optional if the `digitalTwinType`
-                  field is specified and the target DigitalTwin is of type `schemaaware`.
+                  field is unspecified or the DigitalTwin is of type `schemaaware`.
                   Always ignored otherwise.
                 properties:
                   apiVersion:
@@ -120,9 +120,8 @@ spec:
               scenarioRef:
                 description: Scenario object for the Simulation. The task names in
                   the Scenario must be the name of a Schema in the DataSet used by
-                  the DigitalTwin. Required if the `digitalTwinType` field is specified
-                  and the target DigitalTwin is of type `schemaaware`. Always ignored
-                  otherwise.
+                  the DigitalTwin. Required if the `digitalTwinType` field is unspecified
+                  or the DigitalTwin is of type `schemaaware`. Always ignored otherwise.
                 properties:
                   apiVersion:
                     description: API version of the referent.
